src/frontend/.antlr/SycCompilerParser.java
// Generated from /home/yang/桌面/compiler/src/frontend/SycCompiler.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SycCompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Int=2, Return=3, If=4, Else=5, For=6, While=7, Do=8, Break=9, 
		Continue=10, Lparen=11, Rparen=12, Lbrkt=13, Rbrkt=14, Lbrace=15, Rbrace=16, 
		Comma=17, Semicolon=18, Question=19, Colon=20, Minus=21, Exclamation=22, 
		Tilde=23, Addition=24, Multiplication=25, AND=26, Division=27, Modulo=28, 
		LAND=29, LOR=30, EQ=31, NEQ=32, LT=33, LE=34, GT=35, GE=36, Interger=37, 
		Identifier=38, WS=39;
	public static final int
		RULE_prog = 0, RULE_func = 1, RULE_blockItem = 2, RULE_decl_global = 3, 
		RULE_decl = 4, RULE_stmt = 5, RULE_expr = 6, RULE_cond = 7, RULE_lor_op = 8, 
		RULE_land_op = 9, RULE_equ = 10, RULE_rel = 11, RULE_add = 12, RULE_mul = 13, 
		RULE_unary = 14, RULE_postfix = 15, RULE_primary = 16, RULE_type = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "func", "blockItem", "decl_global", "decl", "stmt", "expr", "cond", 
			"lor_op", "land_op", "equ", "rel", "add", "mul", "unary", "postfix", 
			"primary", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'int'", "'return'", "'if'", "'else'", "'for'", "'while'", 
			"'do'", "'break'", "'continue'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"','", "';'", "'?'", "':'", "'-'", "'!'", "'~'", "'+'", "'*'", "'&'", 
			"'/'", "'%'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "Int", "Return", "If", "Else", "For", "While", "Do", "Break", 
			"Continue", "Lparen", "Rparen", "Lbrkt", "Rbrkt", "Lbrace", "Rbrace", 
			"Comma", "Semicolon", "Question", "Colon", "Minus", "Exclamation", "Tilde", 
			"Addition", "Multiplication", "AND", "Division", "Modulo", "LAND", "LOR", 
			"EQ", "NEQ", "LT", "LE", "GT", "GE", "Interger", "Identifier", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SycCompiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SycCompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SycCompilerParser.EOF, 0); }
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public List<Decl_globalContext> decl_global() {
			return getRuleContexts(Decl_globalContext.class);
		}
		public Decl_globalContext decl_global(int i) {
			return getRuleContext(Decl_globalContext.class,i);
		}
		public List<TerminalNode> Semicolon() { return getTokens(SycCompilerParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(SycCompilerParser.Semicolon, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Int) {
				{
				setState(40);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(36);
					func();
					}
					break;
				case 2:
					{
					setState(37);
					decl_global();
					setState(38);
					match(Semicolon);
					}
					break;
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> Identifier() { return getTokens(SycCompilerParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(SycCompilerParser.Identifier, i);
		}
		public TerminalNode Lparen() { return getToken(SycCompilerParser.Lparen, 0); }
		public TerminalNode Rparen() { return getToken(SycCompilerParser.Rparen, 0); }
		public TerminalNode Lbrace() { return getToken(SycCompilerParser.Lbrace, 0); }
		public TerminalNode Rbrace() { return getToken(SycCompilerParser.Rbrace, 0); }
		public TerminalNode Semicolon() { return getToken(SycCompilerParser.Semicolon, 0); }
		public List<TerminalNode> Comma() { return getTokens(SycCompilerParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(SycCompilerParser.Comma, i);
		}
		public List<BlockItemContext> blockItem() {
			return getRuleContexts(BlockItemContext.class);
		}
		public BlockItemContext blockItem(int i) {
			return getRuleContext(BlockItemContext.class,i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			type();
			setState(48);
			match(Identifier);
			setState(49);
			match(Lparen);
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(50);
					type();
					setState(51);
					match(Identifier);
					setState(52);
					match(Comma);
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Int) {
				{
				setState(59);
				type();
				setState(60);
				match(Identifier);
				}
			}

			setState(64);
			match(Rparen);
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Lbrace:
				{
				setState(65);
				match(Lbrace);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Return) | (1L << If) | (1L << For) | (1L << While) | (1L << Do) | (1L << Break) | (1L << Continue) | (1L << Lparen) | (1L << Lbrace) | (1L << Semicolon) | (1L << Minus) | (1L << Exclamation) | (1L << Tilde) | (1L << Multiplication) | (1L << AND) | (1L << Interger) | (1L << Identifier))) != 0)) {
					{
					{
					setState(66);
					blockItem();
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(Rbrace);
				}
				break;
			case Semicolon:
				{
				setState(73);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockItemContext extends ParserRuleContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(SycCompilerParser.Semicolon, 0); }
		public BlockItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockItem; }
	}

	public final BlockItemContext blockItem() throws RecognitionException {
		BlockItemContext _localctx = new BlockItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blockItem);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Return:
			case If:
			case For:
			case While:
			case Do:
			case Break:
			case Continue:
			case Lparen:
			case Lbrace:
			case Semicolon:
			case Minus:
			case Exclamation:
			case Tilde:
			case Multiplication:
			case AND:
			case Interger:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				stmt();
				}
				break;
			case Int:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				decl();
				setState(78);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_globalContext extends ParserRuleContext {
		public Decl_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_global; }
	 
		public Decl_globalContext() { }
		public void copyFrom(Decl_globalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GlobalVarContext extends Decl_globalContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SycCompilerParser.Identifier, 0); }
		public TerminalNode Interger() { return getToken(SycCompilerParser.Interger, 0); }
		public GlobalVarContext(Decl_globalContext ctx) { copyFrom(ctx); }
	}
	public static class GlobalArrDefContext extends Decl_globalContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SycCompilerParser.Identifier, 0); }
		public List<TerminalNode> Lbrkt() { return getTokens(SycCompilerParser.Lbrkt); }
		public TerminalNode Lbrkt(int i) {
			return getToken(SycCompilerParser.Lbrkt, i);
		}
		public List<TerminalNode> Interger() { return getTokens(SycCompilerParser.Interger); }
		public TerminalNode Interger(int i) {
			return getToken(SycCompilerParser.Interger, i);
		}
		public List<TerminalNode> Rbrkt() { return getTokens(SycCompilerParser.Rbrkt); }
		public TerminalNode Rbrkt(int i) {
			return getToken(SycCompilerParser.Rbrkt, i);
		}
		public GlobalArrDefContext(Decl_globalContext ctx) { copyFrom(ctx); }
	}

	public final Decl_globalContext decl_global() throws RecognitionException {
		Decl_globalContext _localctx = new Decl_globalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl_global);
		int _la;
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new GlobalVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				type();
				setState(83);
				match(Identifier);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(84);
					match(T__0);
					setState(85);
					match(Interger);
					}
				}

				}
				break;
			case 2:
				_localctx = new GlobalArrDefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				type();
				setState(89);
				match(Identifier);
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(90);
					match(Lbrkt);
					setState(91);
					match(Interger);
					setState(92);
					match(Rbrkt);
					}
					}
					setState(95); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Lbrkt );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarDefContext extends DeclContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SycCompilerParser.Identifier, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarDefContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class LocalArrDefContext extends DeclContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SycCompilerParser.Identifier, 0); }
		public List<TerminalNode> Lbrkt() { return getTokens(SycCompilerParser.Lbrkt); }
		public TerminalNode Lbrkt(int i) {
			return getToken(SycCompilerParser.Lbrkt, i);
		}
		public List<TerminalNode> Interger() { return getTokens(SycCompilerParser.Interger); }
		public TerminalNode Interger(int i) {
			return getToken(SycCompilerParser.Interger, i);
		}
		public List<TerminalNode> Rbrkt() { return getTokens(SycCompilerParser.Rbrkt); }
		public TerminalNode Rbrkt(int i) {
			return getToken(SycCompilerParser.Rbrkt, i);
		}
		public LocalArrDefContext(DeclContext ctx) { copyFrom(ctx); }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decl);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				_localctx = new VarDefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				type();
				setState(100);
				match(Identifier);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(101);
					match(T__0);
					setState(102);
					expr();
					}
				}

				}
				break;
			case 2:
				_localctx = new LocalArrDefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				type();
				setState(106);
				match(Identifier);
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(107);
					match(Lbrkt);
					setState(108);
					match(Interger);
					setState(109);
					match(Rbrkt);
					}
					}
					setState(112); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Lbrkt );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileLoopContext extends StmtContext {
		public TerminalNode While() { return getToken(SycCompilerParser.While, 0); }
		public TerminalNode Lparen() { return getToken(SycCompilerParser.Lparen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(SycCompilerParser.Rparen, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public WhileLoopContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class SingleExprContext extends StmtContext {
		public TerminalNode Semicolon() { return getToken(SycCompilerParser.Semicolon, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SingleExprContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class IfStmtContext extends StmtContext {
		public TerminalNode If() { return getToken(SycCompilerParser.If, 0); }
		public TerminalNode Lparen() { return getToken(SycCompilerParser.Lparen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(SycCompilerParser.Rparen, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode Else() { return getToken(SycCompilerParser.Else, 0); }
		public IfStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class DoWhileContext extends StmtContext {
		public TerminalNode Do() { return getToken(SycCompilerParser.Do, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode While() { return getToken(SycCompilerParser.While, 0); }
		public TerminalNode Lparen() { return getToken(SycCompilerParser.Lparen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(SycCompilerParser.Rparen, 0); }
		public TerminalNode Semicolon() { return getToken(SycCompilerParser.Semicolon, 0); }
		public DoWhileContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class BreakContext extends StmtContext {
		public TerminalNode Break() { return getToken(SycCompilerParser.Break, 0); }
		public TerminalNode Semicolon() { return getToken(SycCompilerParser.Semicolon, 0); }
		public BreakContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ContinueContext extends StmtContext {
		public TerminalNode Continue() { return getToken(SycCompilerParser.Continue, 0); }
		public TerminalNode Semicolon() { return getToken(SycCompilerParser.Semicolon, 0); }
		public ContinueContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class BlockContext extends StmtContext {
		public TerminalNode Lbrace() { return getToken(SycCompilerParser.Lbrace, 0); }
		public TerminalNode Rbrace() { return getToken(SycCompilerParser.Rbrace, 0); }
		public List<BlockItemContext> blockItem() {
			return getRuleContexts(BlockItemContext.class);
		}
		public BlockItemContext blockItem(int i) {
			return getRuleContext(BlockItemContext.class,i);
		}
		public BlockContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnStmtContext extends StmtContext {
		public TerminalNode Return() { return getToken(SycCompilerParser.Return, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(SycCompilerParser.Semicolon, 0); }
		public ReturnStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ForLoopContext extends StmtContext {
		public TerminalNode For() { return getToken(SycCompilerParser.For, 0); }
		public TerminalNode Lparen() { return getToken(SycCompilerParser.Lparen, 0); }
		public List<TerminalNode> Semicolon() { return getTokens(SycCompilerParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(SycCompilerParser.Semicolon, i);
		}
		public TerminalNode Rparen() { return getToken(SycCompilerParser.Rparen, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ForLoopContext(StmtContext ctx) { copyFrom(ctx); }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stmt);
		int _la;
		try {
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Return:
				_localctx = new ReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(Return);
				setState(117);
				expr();
				setState(118);
				match(Semicolon);
				}
				break;
			case Lparen:
			case Semicolon:
			case Minus:
			case Exclamation:
			case Tilde:
			case Multiplication:
			case AND:
			case Interger:
			case Identifier:
				_localctx = new SingleExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Lparen) | (1L << Minus) | (1L << Exclamation) | (1L << Tilde) | (1L << Multiplication) | (1L << AND) | (1L << Interger) | (1L << Identifier))) != 0)) {
					{
					setState(120);
					expr();
					}
				}

				setState(123);
				match(Semicolon);
				}
				break;
			case If:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				match(If);
				setState(125);
				match(Lparen);
				setState(126);
				expr();
				setState(127);
				match(Rparen);
				setState(128);
				stmt();
				setState(131);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(129);
					match(Else);
					setState(130);
					stmt();
					}
					break;
				}
				}
				break;
			case Lbrace:
				_localctx = new BlockContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				match(Lbrace);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Return) | (1L << If) | (1L << For) | (1L << While) | (1L << Do) | (1L << Break) | (1L << Continue) | (1L << Lparen) | (1L << Lbrace) | (1L << Semicolon) | (1L << Minus) | (1L << Exclamation) | (1L << Tilde) | (1L << Multiplication) | (1L << AND) | (1L << Interger) | (1L << Identifier))) != 0)) {
					{
					{
					setState(134);
					blockItem();
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(140);
				match(Rbrace);
				}
				break;
			case While:
				_localctx = new WhileLoopContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				match(While);
				setState(142);
				match(Lparen);
				setState(143);
				expr();
				setState(144);
				match(Rparen);
				setState(145);
				stmt();
				}
				break;
			case Do:
				_localctx = new DoWhileContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(147);
				match(Do);
				setState(148);
				stmt();
				setState(149);
				match(While);
				setState(150);
				match(Lparen);
				setState(151);
				expr();
				setState(152);
				match(Rparen);
				setState(153);
				match(Semicolon);
				}
				break;
			case For:
				_localctx = new ForLoopContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(155);
				match(For);
				setState(156);
				match(Lparen);
				setState(159);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Int:
					{
					setState(157);
					decl();
					}
					break;
				case Lparen:
				case Minus:
				case Exclamation:
				case Tilde:
				case Multiplication:
				case AND:
				case Interger:
				case Identifier:
					{
					setState(158);
					expr();
					}
					break;
				case Semicolon:
					break;
				default:
					break;
				}
				setState(161);
				match(Semicolon);
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Lparen) | (1L << Minus) | (1L << Exclamation) | (1L << Tilde) | (1L << Multiplication) | (1L << AND) | (1L << Interger) | (1L << Identifier))) != 0)) {
					{
					setState(162);
					expr();
					}
				}

				setState(165);
				match(Semicolon);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Lparen) | (1L << Minus) | (1L << Exclamation) | (1L << Tilde) | (1L << Multiplication) | (1L << AND) | (1L << Interger) | (1L << Identifier))) != 0)) {
					{
					setState(166);
					expr();
					}
				}

				setState(169);
				match(Rparen);
				setState(170);
				stmt();
				}
				break;
			case Break:
				_localctx = new BreakContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(171);
				match(Break);
				setState(172);
				match(Semicolon);
				}
				break;
			case Continue:
				_localctx = new ContinueContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(173);
				match(Continue);
				setState(174);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Cond_nopContext extends ExprContext {
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public Cond_nopContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AssignContext extends ExprContext {
		public UnaryContext unary() {
			return getRuleContext(UnaryContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr);
		try {
			setState(182);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				_localctx = new AssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(177);
				unary();
				setState(178);
				match(T__0);
				setState(179);
				expr();
				}
				break;
			case 2:
				_localctx = new Cond_nopContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				cond();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
	 
		public CondContext() { }
		public void copyFrom(CondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Lor_nopContext extends CondContext {
		public Lor_opContext lor_op() {
			return getRuleContext(Lor_opContext.class,0);
		}
		public Lor_nopContext(CondContext ctx) { copyFrom(ctx); }
	}
	public static class CondExprContext extends CondContext {
		public Lor_opContext lor_op() {
			return getRuleContext(Lor_opContext.class,0);
		}
		public TerminalNode Question() { return getToken(SycCompilerParser.Question, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Colon() { return getToken(SycCompilerParser.Colon, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public CondExprContext(CondContext ctx) { copyFrom(ctx); }
	}
